--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@mui/x-date-pickers": "^6.16.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "date-fns": "^2.30.0",
     "mapbox-gl": "^2.15.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
